allprojects {
    group = 'melky.resourcepacks'
    version = '1.2.0'
}


subprojects {
    apply plugin: "java"

    java {
        sourceCompatibility = 11
    }

    task shadowJar(type: Jar) {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
        archiveFileName.set "${archiveBaseName.get()}-v${project.version}.${archiveExtension.get()}"
        from {
            configurations.runtimeClasspath.collect {
                it.isDirectory() ? it : zipTree(it)
            }
        }
        from {
            configurations.compileClasspath.collect {
                it.isDirectory() ? it : zipTree(it).matching {
                    include 'net/runelite/api/gameval/SpriteID.class'
                }
            }
        }
        with tasks.jar
    }
}